ruby/headers/ruby.h

typedef unsigned long VALUE;
typedef unsigned long ID;
VALUE rb_int2inum (long);
VALUE rb_uint2inum (unsigned long);
void rb_glob (const char*,void(*)(const char*,VALUE),VALUE);
void rb_globi (const char*,void(*)(const char*,VALUE),VALUE);
void rb_define_virtual_variable (const char*,VALUE(*)(),void(*)());
void rb_define_hooked_variable (const char*,VALUE*,VALUE(*)(),void(*)());
int ruby_glob (const char*,int,int(*)(const char*,VALUE),VALUE);
int ruby_globi (const char*,int,int(*)(const char*,VALUE),VALUE);
void rb_define_method (VALUE,const char*,VALUE(*)(),int);
void rb_define_module_function (VALUE,const char*,VALUE(*)(),int);
void rb_define_global_function (const char*,VALUE(*)(),int);
VALUE rb_iterate (VALUE(*)(VALUE),VALUE,VALUE(*)(),VALUE);
VALUE rb_rescue (VALUE(*)(),VALUE,VALUE(*)(),VALUE);
VALUE rb_rescue2 (VALUE(*)(),VALUE,VALUE(*)(),VALUE,...);
VALUE rb_ensure (VALUE(*)(),VALUE,VALUE(*)(),VALUE);
VALUE rb_catch (const char*,VALUE(*)(),VALUE);
void rb_mem_clear (register VALUE*, register long);
VALUE rb_assoc_new (VALUE, VALUE);
VALUE rb_check_array_type (VALUE);
VALUE rb_ary_new (void);
VALUE rb_ary_new2 (long);
VALUE rb_ary_new3 (long,...);
VALUE rb_ary_new4 (long, const VALUE *);
VALUE rb_ary_freeze (VALUE);
VALUE rb_ary_aref (int, VALUE*, VALUE);
void rb_ary_store (VALUE, long, VALUE);
VALUE rb_ary_dup (VALUE);
VALUE rb_ary_to_ary (VALUE);
VALUE rb_ary_to_s (VALUE);
VALUE rb_ary_push (VALUE, VALUE);
VALUE rb_ary_pop (VALUE);
VALUE rb_ary_shift (VALUE);
VALUE rb_ary_unshift (VALUE, VALUE);
VALUE rb_ary_entry (VALUE, long);
VALUE rb_ary_each (VALUE);
VALUE rb_ary_join (VALUE, VALUE);
VALUE rb_ary_print_on (VALUE, VALUE);
VALUE rb_ary_reverse (VALUE);
VALUE rb_ary_sort (VALUE);
VALUE rb_ary_sort_bang (VALUE);
VALUE rb_ary_delete (VALUE, VALUE);
VALUE rb_ary_delete_at (VALUE, long);
VALUE rb_ary_clear (VALUE);
VALUE rb_ary_plus (VALUE, VALUE);
VALUE rb_ary_concat (VALUE, VALUE);
VALUE rb_ary_assoc (VALUE, VALUE);
VALUE rb_ary_rassoc (VALUE, VALUE);
VALUE rb_ary_includes (VALUE, VALUE);
VALUE rb_ary_cmp (VALUE, VALUE);
VALUE rb_protect_inspect (VALUE(*)(),VALUE,VALUE);
VALUE rb_inspecting_p (VALUE);
VALUE rb_check_array_value (VALUE);
VALUE rb_values_at (VALUE, long, int, VALUE*, VALUE(*) (VALUE,long));
VALUE rb_big_clone (VALUE);
void rb_big_2comp (VALUE);
VALUE rb_big_norm (VALUE);
VALUE rb_uint2big (unsigned long);
VALUE rb_int2big (long);
VALUE rb_uint2inum (unsigned long);
VALUE rb_int2inum (long);
VALUE rb_cstr_to_inum (const char*, int, int);
VALUE rb_str_to_inum (VALUE, int, int);
VALUE rb_cstr2inum (const char*, int);
VALUE rb_str2inum (VALUE, int);
VALUE rb_big2str (VALUE, int);
long rb_big2long (VALUE);
unsigned long rb_big2ulong (VALUE);
void rb_quad_pack (char*,VALUE);
VALUE rb_quad_unpack (const char*,int);
VALUE rb_dbl2big (double);
double rb_big2dbl (VALUE);
VALUE rb_big_plus (VALUE, VALUE);
VALUE rb_big_minus (VALUE, VALUE);
VALUE rb_big_mul (VALUE, VALUE);
VALUE rb_big_divmod (VALUE, VALUE);
VALUE rb_big_pow (VALUE, VALUE);
VALUE rb_big_and (VALUE, VALUE);
VALUE rb_big_or (VALUE, VALUE);
VALUE rb_big_xor (VALUE, VALUE);
VALUE rb_big_lshift (VALUE, VALUE);
VALUE rb_big_rand (VALUE, double*);
VALUE rb_class_boot (VALUE);
VALUE rb_class_new (VALUE);
VALUE rb_mod_init_copy (VALUE, VALUE);
VALUE rb_class_init_copy (VALUE, VALUE);
VALUE rb_singleton_class_clone (VALUE);
void rb_singleton_class_attached (VALUE,VALUE);
VALUE rb_make_metaclass (VALUE, VALUE);
void rb_check_inheritable (VALUE);
VALUE rb_class_inherited (VALUE, VALUE);
VALUE rb_define_class_id (ID, VALUE);
VALUE rb_module_new (void);
VALUE rb_define_module_id (ID);
VALUE rb_mod_included_modules (VALUE);
VALUE rb_mod_include_p (VALUE, VALUE);
VALUE rb_mod_ancestors (VALUE);
VALUE rb_class_instance_methods (int, VALUE*, VALUE);
VALUE rb_class_public_instance_methods (int, VALUE*, VALUE);
VALUE rb_class_protected_instance_methods (int, VALUE*, VALUE);
VALUE rb_class_private_instance_methods (int, VALUE*, VALUE);
VALUE rb_obj_singleton_methods (int, VALUE*, VALUE);
void rb_define_method_id (VALUE, ID, VALUE (*)(), int);
void rb_frozen_class_p (VALUE);
void rb_undef (VALUE, ID);
void rb_define_protected_method (VALUE, const char*, VALUE (*)(), int);
void rb_define_private_method (VALUE, const char*, VALUE (*)(), int);
void rb_define_singleton_method (VALUE, const char*, VALUE(*)(), int);
VALUE rb_singleton_class (VALUE);
int rb_cmpint (VALUE, VALUE, VALUE);
void rb_cmperr (VALUE, VALUE) __attribute__ ((noreturn));
extern int ruby_nerrs;
VALUE rb_exc_new (VALUE, const char*, long);
VALUE rb_exc_new2 (VALUE, const char*);
VALUE rb_exc_new3 (VALUE, VALUE);
void rb_loaderror (const char*, ...) __attribute__ ((noreturn));
void rb_name_error (ID, const char*, ...) __attribute__ ((noreturn));
void rb_invalid_str (const char*, const char*) __attribute__ ((noreturn));
void rb_compile_error (const char*, ...);
void rb_compile_error_append (const char*, ...);
void rb_load_fail (const char*) __attribute__ ((noreturn));
void rb_error_frozen (const char*) __attribute__ ((noreturn));
void rb_check_frozen (VALUE);
extern struct RNode *ruby_current_node;
void ruby_set_current_source (void);
void rb_exc_raise (VALUE) __attribute__ ((noreturn));
void rb_exc_fatal (VALUE) __attribute__ ((noreturn));
VALUE rb_f_exit (int,VALUE*);
VALUE rb_f_abort (int,VALUE*);
void rb_remove_method (VALUE, const char*);
void rb_define_alloc_func (VALUE, VALUE (*)(VALUE));
void rb_undef_alloc_func (VALUE);
void rb_clear_cache (void);
void rb_clear_cache_by_class (VALUE);
void rb_alias (VALUE, ID, ID);
void rb_attr (VALUE,ID,int,int,int);
int rb_method_boundp (VALUE, ID, int);
VALUE rb_dvar_defined (ID);
VALUE rb_dvar_curr (ID);
VALUE rb_dvar_ref (ID);
void rb_dvar_asgn (ID, VALUE);
void rb_dvar_push (ID, VALUE);
VALUE *rb_svar (int);
VALUE rb_eval_cmd (VALUE, VALUE, int);
int rb_obj_respond_to (VALUE, ID, int);
int rb_respond_to (VALUE, ID);
void rb_interrupt (void);
VALUE rb_apply (VALUE, ID, VALUE);
void rb_backtrace (void);
ID rb_frame_last_func (void);
VALUE rb_obj_instance_eval (int, VALUE*, VALUE);
VALUE rb_mod_module_eval (int, VALUE*, VALUE);
void rb_load (VALUE, int);
void rb_load_protect (VALUE, int, int*);
void rb_jump_tag (int) __attribute__ ((noreturn));
int rb_provided (const char*);
void rb_provide (const char*);
VALUE rb_f_require (VALUE, VALUE);
VALUE rb_require_safe (VALUE, int);
void rb_obj_call_init (VALUE, int, VALUE*);
VALUE rb_class_new_instance (int, VALUE*, VALUE);
VALUE rb_block_proc (void);
VALUE rb_f_lambda (void);
VALUE rb_proc_new (VALUE (*)( ), VALUE);
VALUE rb_protect (VALUE (*)(VALUE), VALUE, int*);
void rb_set_end_proc (void (*)(VALUE), VALUE);
void rb_mark_end_proc (void);
void rb_exec_end_proc (void);
void ruby_finalize (void);
void ruby_stop (int) __attribute__ ((noreturn));
int ruby_cleanup (int);
int ruby_exec (void);
void rb_gc_mark_threads (void);
void rb_thread_start_timer (void);
void rb_thread_stop_timer (void);
void rb_thread_schedule (void);
void rb_thread_wait_fd (int);
int rb_thread_fd_writable (int);
void rb_thread_fd_close (int);
int rb_thread_alone (void);
void rb_thread_polling (void);
void rb_thread_sleep (int);
void rb_thread_sleep_forever (void);
VALUE rb_thread_stop (void);
VALUE rb_thread_wakeup (VALUE);
VALUE rb_thread_run (VALUE);
VALUE rb_thread_kill (VALUE);
VALUE rb_thread_create (VALUE (*)(), void*);
void rb_thread_interrupt (void);
void rb_thread_trap_eval (VALUE, int, int);
void rb_thread_signal_raise (char*);
void rb_thread_signal_exit (void);
int rb_thread_select (int, fd_set *, fd_set *, fd_set *, struct timeval *);
void rb_thread_wait_for (struct timeval);
VALUE rb_thread_current (void);
VALUE rb_thread_main (void);
VALUE rb_thread_local_aref (VALUE, ID);
VALUE rb_thread_local_aset (VALUE, ID, VALUE);
void rb_thread_atfork (void);
VALUE rb_funcall_rescue (VALUE, ID, int, ...);
int eaccess (const char*, int);
VALUE rb_file_s_expand_path (int, VALUE *);
VALUE rb_file_expand_path (VALUE, VALUE);
void rb_file_const (const char*, VALUE);
int rb_find_file_ext (VALUE*, const char* const*);
VALUE rb_find_file (VALUE);
char *rb_path_next (const char *);
char *rb_path_skip_prefix (const char *);
char *rb_path_last_separator (const char *);
char *rb_path_end (const char *);
void rb_memerror (void) __attribute__ ((noreturn));
int ruby_stack_check (void);
int ruby_stack_length (VALUE**);
char *rb_source_filename (const char*);
void rb_gc_mark_locations (VALUE*, VALUE*);
void rb_mark_tbl (struct st_table*);
void rb_mark_hash (struct st_table*);
void rb_gc_mark_maybe (VALUE);
void rb_gc_mark (VALUE);
void rb_gc_force_recycle (VALUE);
void rb_gc (void);
void rb_gc_copy_finalizer (VALUE,VALUE);
void rb_gc_finalize_deferred (void);
void rb_gc_call_finalizer_at_exit (void);
VALUE rb_gc_enable (void);
VALUE rb_gc_disable (void);
VALUE rb_gc_start (void);
void st_foreach_safe (struct st_table *, int (*)(), unsigned long);
void rb_hash_foreach (VALUE, int (*)(), VALUE);
VALUE rb_hash (VALUE);
VALUE rb_hash_new (void);
VALUE rb_hash_freeze (VALUE);
VALUE rb_hash_aref (VALUE, VALUE);
VALUE rb_hash_aset (VALUE, VALUE, VALUE);
VALUE rb_hash_delete_if (VALUE);
VALUE rb_hash_delete (VALUE,VALUE);
int rb_path_check (char*);
int rb_env_path_tainted (void);
extern VALUE rb_fs;
extern VALUE rb_output_fs;
extern VALUE rb_rs;
extern VALUE rb_default_rs;
extern VALUE rb_output_rs;
VALUE rb_io_write (VALUE, VALUE);
VALUE rb_io_gets (VALUE);
VALUE rb_io_getc (VALUE);
VALUE rb_io_ungetc (VALUE, VALUE);
VALUE rb_io_close (VALUE);
VALUE rb_io_eof (VALUE);
VALUE rb_io_binmode (VALUE);
VALUE rb_io_addstr (VALUE, VALUE);
VALUE rb_io_printf (int, VALUE*, VALUE);
VALUE rb_io_print (int, VALUE*, VALUE);
VALUE rb_io_puts (int, VALUE*, VALUE);
VALUE rb_file_open (const char*, const char*);
VALUE rb_gets (void);
void rb_write_error (const char*);
void rb_write_error2 (const char*, long);
VALUE rb_marshal_dump (VALUE, VALUE);
VALUE rb_marshal_load (VALUE);
void rb_num_zerodiv (void);
VALUE rb_num_coerce_bin (VALUE, VALUE);
VALUE rb_num_coerce_cmp (VALUE, VALUE);
VALUE rb_num_coerce_relop (VALUE, VALUE);
VALUE rb_float_new (double);
VALUE rb_num2fix (VALUE);
VALUE rb_fix2str (VALUE, int);
VALUE rb_dbl_cmp (double, double);
int rb_eql (VALUE, VALUE);
VALUE rb_any_to_s (VALUE);
VALUE rb_inspect (VALUE);
VALUE rb_obj_is_instance_of (VALUE, VALUE);
VALUE rb_obj_is_kind_of (VALUE, VALUE);
VALUE rb_obj_alloc (VALUE);
VALUE rb_obj_clone (VALUE);
VALUE rb_obj_dup (VALUE);
VALUE rb_obj_init_copy (VALUE,VALUE);
VALUE rb_obj_taint (VALUE);
VALUE rb_obj_tainted (VALUE);
VALUE rb_obj_untaint (VALUE);
VALUE rb_obj_freeze (VALUE);
VALUE rb_obj_id (VALUE);
VALUE rb_obj_class (VALUE);
VALUE rb_class_real (VALUE);
VALUE rb_class_inherited_p (VALUE, VALUE);
VALUE rb_convert_type (VALUE,int,const char*,const char*);
VALUE rb_check_convert_type (VALUE,int,const char*,const char*);
VALUE rb_to_int (VALUE);
VALUE rb_Integer (VALUE);
VALUE rb_Float (VALUE);
VALUE rb_String (VALUE);
VALUE rb_Array (VALUE);
double rb_cstr_to_dbl (const char*, int);
double rb_str_to_dbl (VALUE, int);
extern int ruby_sourceline;
extern char *ruby_sourcefile;
int ruby_yyparse (void);
ID rb_id_attrset (ID);
void rb_parser_append_print (void);
void rb_parser_while_loop (int, int);
int ruby_parser_stack_on_heap (void);
void rb_gc_mark_parser (void);
int rb_is_const_id (ID);
int rb_is_instance_id (ID);
int rb_is_class_id (ID);
int rb_is_local_id (ID);
int rb_is_junk_id (ID);
int rb_symname_p (const char*);
VALUE rb_backref_get (void);
void rb_backref_set (VALUE);
VALUE rb_lastline_get (void);
void rb_lastline_set (VALUE);
VALUE rb_sym_all_symbols (void);
int rb_proc_exec (const char*);
VALUE rb_f_exec (int,VALUE*);
int rb_waitpid (int,int*,int);
void rb_syswait (int);
VALUE rb_proc_times (VALUE);
VALUE rb_detach_process (int);
VALUE rb_range_new (VALUE, VALUE, int);
VALUE rb_range_beg_len (VALUE, long*, long*, long, int);
VALUE rb_length_by_each (VALUE);
int rb_memcmp (char*,char*,long);
int rb_memcicmp (char*,char*,long);
long rb_memsearch (char*,long,char*,long);
VALUE rb_reg_nth_defined (int, VALUE);
VALUE rb_reg_nth_match (int, VALUE);
VALUE rb_reg_last_match (VALUE);
VALUE rb_reg_match_pre (VALUE);
VALUE rb_reg_match_post (VALUE);
VALUE rb_reg_match_last (VALUE);
VALUE rb_reg_new (const char*, long, int);
VALUE rb_reg_match (VALUE, VALUE);
VALUE rb_reg_match2 (VALUE);
int rb_reg_options (VALUE);
void rb_set_kcode (const char*);
const char* rb_get_kcode (void);
extern VALUE rb_argv;
extern VALUE rb_argv0;
void rb_load_file (const char*);
void ruby_script (const char*);
void ruby_prog_init (void);
void ruby_set_argv (int, char**);
void ruby_process_options (int, char**);
void ruby_load_script (void);
void ruby_init_loadpath (void);
void ruby_incpush (const char*);
VALUE rb_f_kill (int, VALUE*);
void rb_gc_mark_trap_list (void);
void ruby_posix_signal (int, void (*)(int));
void rb_trap_exit (void);
void rb_trap_exec (void);
const char *ruby_signal_name (int);
VALUE rb_f_sprintf (int, VALUE*);